[gd_scene load_steps=34 format=2]

[ext_resource path="res://src/WFC.gd" type="Script" id=1]
[ext_resource path="res://src/VoxelGrid.gd" type="Script" id=2]
[ext_resource path="res://src/SDFGen.gd" type="Script" id=3]
[ext_resource path="res://assets/img/1px.png" type="Texture" id=4]
[ext_resource path="res://src/Planet.gd" type="Script" id=5]
[ext_resource path="res://assets/shaders/PossibilityCube.shader" type="Shader" id=6]
[ext_resource path="res://assets/shaders/VoxelSpereOutside.shader" type="Shader" id=7]
[ext_resource path="res://assets/shaders/SDFRenderer.shader" type="Shader" id=8]
[ext_resource path="res://assets/shaders/WaterShader.shader" type="Shader" id=9]
[ext_resource path="res://assets/shaders/Wireframe.shader" type="Shader" id=10]
[ext_resource path="res://assets/shaders/SDFGen.shader" type="Shader" id=11]
[ext_resource path="res://assets/shaders/VoxelSpereInside.shader" type="Shader" id=12]
[ext_resource path="res://assets/shaders/Atmosphere.shader" type="Shader" id=13]
[ext_resource path="res://src/Icosphere.gd" type="Script" id=14]
[ext_resource path="res://bin/wfc.gdns" type="Script" id=15]
[ext_resource path="res://assets/shaders/LandShader.shader" type="Shader" id=16]
[ext_resource path="res://assets/img/palette.png" type="Texture" id=17]
[ext_resource path="res://scenes/Orbit.tscn" type="PackedScene" id=18]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 16 )
shader_param/u_sun_pos = null
shader_param/u_camera_pos = null
shader_param/u_sdf_resolution = null
shader_param/u_sdf_volume_radius = null
shader_param/u_sdf_dist_mod = null
shader_param/u_rows = null
shader_param/u_cols = null
shader_param/u_sdf_quintic_filter = null
shader_param/u_texture = ExtResource( 17 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 9 )
shader_param/u_deep_colour = Plane( 1, 1, 1, 1 )
shader_param/u_shallow_colour = Plane( 1, 1, 1, 1 )
shader_param/u_camera_pos = Vector3( 0, 0, 0 )
shader_param/u_sun_pos = null
shader_param/u_sdf_resolution = null
shader_param/u_sdf_volume_radius = null
shader_param/u_sdf_dist_mod = null
shader_param/u_rows = null
shader_param/u_cols = null
shader_param/u_sdf_quintic_filter = null

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 10 )

[sub_resource type="ArrayMesh" id=4]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 13 )
shader_param/u_sdf_resolution = null
shader_param/u_sdf_volume_radius = null
shader_param/u_sdf_dist_mod = null
shader_param/u_sdf_quintic_filter = null
shader_param/u_rows = null
shader_param/u_cols = null
shader_param/u_camera_pos = null
shader_param/u_sun_pos = null
shader_param/u_planet_centre = Vector3( 0, 0, 0 )
shader_param/u_atmosphere_radius = 15.0
shader_param/u_planet_radius = 11.069
shader_param/u_atmosphere_samples = 28
shader_param/u_optical_samples = 5
shader_param/u_sun_intensity = 1.5
shader_param/u_scattering_strength = 0.95
shader_param/u_scattering_wavelengths = Vector3( 700, 530, 440 )
shader_param/u_density_falloff = 2.5
shader_param/u_volumetric_shadow_scale = 14.17
shader_param/u_volumetric_shadows = false
shader_param/u_phase_r = 15.0
shader_param/u_mie_scatter_coeff = 300.0
shader_param/u_mie_falloff = 10.0
shader_param/u_mie_g = 0.76

[sub_resource type="SphereMesh" id=6]
material = SubResource( 5 )
radius = 20.0
height = 40.0

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 12 )

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 7 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 0.780392 )

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 11 )
shader_param/u_mesh_tex_size = null
shader_param/u_num_tris = null
shader_param/u_rows = null
shader_param/u_cols = null
shader_param/u_sdf_resolution = null
shader_param/u_sdf_volume_radius = null
shader_param/u_sdf_dist_mod = null
shader_param/u_draw_idx = null
shader_param/u_use_bounding_sphere = null
shader_param/u_bound_origin = null
shader_param/u_bound_radius = null

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("SDFGen/Viewport")

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 8 )
shader_param/u_sdf_resolution = null
shader_param/u_sdf_volume_radius = null
shader_param/u_sdf_dist_mod = null
shader_param/u_rows = null
shader_param/u_cols = null
shader_param/u_cam_pos = null

[sub_resource type="CubeMesh" id=14]
material = SubResource( 13 )

[sub_resource type="SphereMesh" id=15]
radius = 0.5
height = 1.0

[node name="Planet" type="Spatial"]
script = ExtResource( 5 )
LandMaterial = SubResource( 1 )
WaterDeepColour = Color( 0, 0.858824, 1, 1 )
WaterShallowColour = Color( 0, 0.858824, 1, 1 )
AutoGenerate = true

[node name="GlobeOcean" type="MeshInstance" parent="."]
material_override = SubResource( 2 )

[node name="GlobeWireframe" type="MeshInstance" parent="."]
visible = false
material_override = SubResource( 3 )

[node name="GlobeLand" type="MeshInstance" parent="."]
mesh = SubResource( 4 )

[node name="Atmosphere" type="MeshInstance" parent="."]
mesh = SubResource( 6 )
material/0 = null

[node name="VoxelGrid" type="Spatial" parent="."]
script = ExtResource( 2 )
grid_height = 5
cell_height = 1.0
possibility_cube_material = SubResource( 7 )
voxel_inside_material = SubResource( 8 )
voxel_outside_material = SubResource( 9 )

[node name="GridMesh" type="MeshInstance" parent="VoxelGrid"]
visible = false
material_override = SubResource( 10 )

[node name="Icosphere" type="Node" parent="."]
script = ExtResource( 14 )
subdivisions = 2

[node name="WFC" type="Node" parent="."]
script = ExtResource( 1 )

[node name="WFCNative" type="Node" parent="WFC"]
script = ExtResource( 15 )

[node name="SDFGen" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="SDFGen"]
keep_3d_linear = true
render_target_v_flip = true
render_target_clear_mode = 1
render_target_format_override = 3
render_target_update_mode = 0

[node name="Rect" type="TextureRect" parent="SDFGen/Viewport"]
material = SubResource( 11 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
expand = true

[node name="SDFPreview" type="TextureRect" parent="SDFGen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 12 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SDFVolume" type="MeshInstance" parent="SDFGen"]
visible = false
mesh = SubResource( 14 )
material/0 = null

[node name="MousePicker" type="MeshInstance" parent="."]
mesh = SubResource( 15 )
material/0 = null

[node name="DebugCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30 )

[node name="Orbit" parent="." instance=ExtResource( 18 )]
